--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "bluebird": "^3.7.2",
     "chalk": "^4.1.0",
     "execa": "^4.0.3",
+    "got": "^11.7.0",
     "js-beautify": "^1.13.0",
+    "lodash": "^4.17.20",
     "prettier": "^2.1.1",
-    "puppeteer": "^5.2.1"
+    "puppeteer": "^5.2.1",
+    "source-map": "^0.7.3"
   },
   "devDependencies": {
     "@textshq/eslint-config": "link:../packages/eslint-config",
     "@types/bluebird": "^3.5.32",
     "@types/eslint": "^7.2.2",
     "@types/js-beautify": "^1.11.0",
+    "@types/lodash": "^4.14.161",
+    "@types/prettier": "^2.1.1",
     "@types/puppeteer": "^3.0.1",
     "eslint": "^7.5.0",
     "typescript": "^3.9.7"
